# ppk2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  setup-udev.sh
cli/: Cargo.toml
cli/src/: main.rs
examples/: cli.rs
ppk2/: Cargo.toml
ppk2/src/: lib.rs  measurement.rs  types.rs
src/: cmd.rs  lib.rs  main.rs  measurement.rs  types.rs
