[package]
name = "ppk2"
version = "0.1.0"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "A driver for Nordic's Power Profiler Kit 2"
readme = "../README.md"
repository = "https://github.com/hdoordt/ppk2-rs"
license = "MIT"
keywords = ["PPK2", "Power", "Profiler", "Nordic", "Serial"]
categories = ["embedded", "development-tools::profiling"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
serialport = "4.2.0"
thiserror = "1.0.32"
tracing = "0.1.36"

[dev-dependencies]
anyhow = { version = "1.0.60", features = ["backtrace"] }
ctrlc = "3.2.2"
tracing-subscriber = "0.3.15"
clap = { version = "3.2.20", features = ["derive", "env"] }

[badges]
maintenance = { status = "passively-maintained" }
