[package]
name = "ppk2-cli"
version = "0.1.0"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60", features = ["backtrace"] }
ctrlc = "3.2.2"
serialport = "4.2.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dependencies.ppk2]
path = "../ppk2"
# version = "0.1.0"
